fix(web): overflowing code blocks

--- a/apps/main-site/src/styles/globals.css
+++ b/apps/main-site/src/styles/globals.css
@@ -10,7 +10,9 @@
 
 .hljs {
 	@apply w-full rounded-lg bg-neutral-50  dark:bg-stone-900  !important;
+	/* Fixes overflowing code blocks */
 	white-space: break-spaces;
+	line-break: anywhere;
 }
 
 .d-emoji {
